// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer has correct default options 1`] = `
<footer
  className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-none grommetux-footer"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  Testing
</footer>
`;

exports[`Footer renders a class name 1`] = `
<footer
  className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-none grommetux-footer test"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  Testing
</footer>
`;

exports[`Footer renders microdata properties 1`] = `
<footer
  className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-none grommetux-footer"
  id={undefined}
  itemProp="test"
  itemScope={true}
  itemType="http://schema.org/WPFooter"
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  Testing
</footer>
`;
